# Zoidberg

./: DESIGN  Makefile  README  build.sh  build_internal.sh  cr.c  cr.h  cr_config.h  edk2.patch  genversion.sh  k_heap.c  k_heap.h  k_heap_bitmap.c  k_main.c  k_network.c  k_network.h  k_thread.c  k_thread.h  kernel.c  kernel.dsc  kmsg.c  run_qemu.sh  run_qemu_gdb.sh  startup.nsh
SimpleThread/: SimpleThread.c  SimpleThread.h  dmthread.c  dmthread.h
efilibc/: Makefile  VERSION  data.c  errno.c  file.c  malloc.c  memmove.c  string.c  strncmp.c  strrchr.c  strstr.c
efilibc/inc/: assert.h  errno.h  stdio.h  stdlib.h  string.h
efilibc/stdio/: asprintf.c  dprintf.c  fprintf.c  (+18 more)
kernel/: dmthread.c  dmthread.h  gen_syscalls.sh  k_console.c  k_console.h  k_initrd.c  k_initrd.h  k_main.c  k_network.c  k_syscalls.c  k_syscalls.h  k_thread.c  k_thread.h  k_utsname.c  k_utsname.h  k_vfs.c  k_vfs.h  k_vfs_proto.c  k_vfs_proto.h  k_video.c  k_video.h  kernel.inf.template  kmsg.c  kmsg.h  nuklear.c  syscalls.lst  zoidberg_version.h
libnet/: Makefile.in  aclocal.m4  configure
logo/: Logo.inf
lwip/: Makefile
newlib/: config.sub
newlib/newlib/libc/sys/zoidberg/: Makefile.am  Makefile.in  automake.am  configure  efilibc.c  file.c  malloc.c  syscalls.c
newlib/newlib/libc/sys/zoidberg/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
physfs-2.0.3/: CMakeLists.txt  Makefile  README.zoidberg  physfs.c  physfs_internal.h  physfs_platforms.h
sdk/: x86_64-zoidberg-as  x86_64-zoidberg-ranlib
userland/: Makefile
vm/: .vm_pawn.c.swp  vm_pawn.c  vm_pawn.h
(+243 files in other folders)
